# codex-dots

./: AGENTS.md  LICENSE  README.md
experiments/codex-better-fork/: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
experiments/codex-better-fork/src/: App.tsx  bridge.ts  fork-navigation.ts  session-refresh.ts  styles.css
experiments/codex-better-fork/src-tauri/: Cargo.toml  tauri.conf.json
experiments/codex-better-fork/src-tauri/capabilities/: default.json
experiments/codex-better-fork/src-tauri/icons/: icon.icns
experiments/codex-better-fork/src-tauri/src/: app_server.rs  commands.rs  http_bridge.rs  lib.rs  main.rs  state.rs
experiments/codex-better-fork/tests/: fork-navigation.test.ts  session-refresh.test.ts
hooks/fresh-deps/: README.md  bundle.json  hooks.json
hooks/fresh-deps/.codex/hooks/: fresh-deps.py  parser-cargo.py  parser-go.py  parser-npm.py  parser-python.py
hooks/fresh-deps/tests/: test-fresh-deps.py
skills/codex-better-fork/: SKILL.md
skills/codex-better-fork/agents/: openai.yaml
skills/github-issue-reporter/: SKILL.md
skills/github-issue-reporter/agents/: openai.yaml
skills/quick-grill/: SKILL.md
skills/quick-grill/agents/: openai.yaml
